--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.475.0",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
     "vue-i18n": "^11.0.1",
