--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.475.0",
     "pinia": "^2.3.0",
+    "swiper": "^11.2.4",
     "vue": "^3.5.13",
     "vue-i18n": "^11.0.1",
     "vue-router": "^4.5.0"
