--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "flatpickr": "^4.6.13",
     "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.475.0",
     "pinia": "^2.3.0",
