--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.475.0",
     "pinia": "^2.3.0",
+    "primevue": "^4.3.1",
     "swiper": "^11.2.4",
     "vue": "^3.5.13",
     "vue-i18n": "^11.0.1",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-tailwind-datepicker": "^1.7.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
@@ -27,7 +29,7 @@
     "eslint-plugin-vue": "^9.30.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5",
+    "vite": "^6.2.0",
     "vite-plugin-vue-devtools": "^7.6.8"
   }
 }
