--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^3.5.13",
     "vue-i18n": "^11.0.1",
     "vue-router": "^4.5.0",
+    "vue-skeletor": "^1.0.6",
     "vue-tailwind-datepicker": "^1.7.3"
   },
   "devDependencies": {
