--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vuepic/vue-datepicker": "^11.0.1",
+    "axios": "^1.8.4",
     "flatpickr": "^4.6.13",
     "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.475.0",
