--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.8.4",
+    "dom-to-image": "^2.6.0",
     "flatpickr": "^4.6.13",
+    "jspdf": "^3.0.1",
     "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.475.0",
     "pinia": "^2.3.0",
