--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jspdf": "^3.0.1",
     "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.475.0",
-    "pinia": "^2.3.0",
+    "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "primevue": "^4.3.1",
     "swiper": "^11.2.4",
     "tailwind-scrollbar-hide": "^2.0.0",
