--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.5",
     "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.8.4",
     "dom-to-image": "^2.6.0",
