--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.5",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.8.4",
     "dom-to-image": "^2.6.0",
